Lab3/LexAndYaccGPT/Assignment/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSEDIV
    CLOSESPAN
    CLOSESTYLE
    CLOSETABLE
    GARBAGE
    OPENDIV
    OPENSPAN
    OPENSTYLE

Grammar

Rule 0     S' -> start
Rule 1     start -> dataCell
Rule 2     skiptag -> CONTENT skiptag
Rule 3     skiptag -> OPENHREF skiptag
Rule 4     skiptag -> CLOSEHREF skiptag
Rule 5     skiptag -> empty
Rule 6     handleheader -> OPENHEADER CONTENT CLOSEHEADER handleheader
Rule 7     handleheader -> empty
Rule 8     dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA empty
Rule 9     dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA empty
Rule 10    dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
Rule 11    dataCell -> OPENDATA OPENHREF CONTENT content content CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
Rule 12    dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CONTENT OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
Rule 13    dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA empty
Rule 14    dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA empty
Rule 15    handlerow -> OPENROW handleheader CLOSEROW handlerow
Rule 16    handlerow -> OPENROW dataCell CLOSEROW handlerow
Rule 17    handlerow -> empty
Rule 18    table -> BEGINTABLE skiptag OPENTABLE handlerow
Rule 19    empty -> <empty>
Rule 20    content -> CONTENT
Rule 21    content -> empty
Rule 22    openhref -> OPENHREF
Rule 23    openhref -> empty
Rule 24    closehref -> CLOSEHREF
Rule 25    closehref -> empty

Terminals, with rules where they appear

BEGINTABLE           : 18
CLOSEDATA            : 8 8 8 8 8 8 8 8 9 9 9 9 9 9 9 9 10 10 10 10 10 10 10 11 11 11 11 11 11 11 12 12 12 12 12 12 12 13 13 13 13 13 13 13 13 14 14 14
CLOSEDIV             : 
CLOSEHEADER          : 6
CLOSEHREF            : 4 8 8 9 10 10 11 11 12 12 12 13 13 13 14 14 24
CLOSEROW             : 15 16
CLOSESPAN            : 
CLOSESTYLE           : 
CLOSETABLE           : 
CONTENT              : 2 6 8 8 8 9 9 9 9 10 10 10 10 10 10 10 11 11 11 11 11 11 11 12 12 12 12 12 12 12 12 12 13 13 13 13 13 13 13 13 13 13 13 14 14 14 20
GARBAGE              : 
OPENDATA             : 8 8 8 8 8 8 8 8 9 9 9 9 9 9 9 9 10 10 10 10 10 10 10 11 11 11 11 11 11 11 12 12 12 12 12 12 12 13 13 13 13 13 13 13 13 14 14 14
OPENDIV              : 
OPENHEADER           : 6
OPENHREF             : 3 8 8 9 10 10 11 11 12 12 12 13 13 13 14 14 22
OPENROW              : 15 16
OPENSPAN             : 
OPENSTYLE            : 
OPENTABLE            : 18
error                : 

Nonterminals, with rules where they appear

closehref            : 10 10 10 11 11 11 12 12 12
content              : 8 8 8 8 8 8 9 9 9 9 9 10 10 10 10 10 10 10 10 10 11 11 11 11 11 11 11 11 11 11 11 12 12 12 12 12 12 12 12 12
dataCell             : 1 16
empty                : 5 7 8 9 10 11 12 13 14 17 21 23 25
handleheader         : 6 15
handlerow            : 15 16 18
openhref             : 10 10 10 11 11 11 12 12 12
skiptag              : 2 3 4 18
start                : 0
table                : 

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . dataCell
    (8) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA empty
    (9) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA empty
    (10) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (11) dataCell -> . OPENDATA OPENHREF CONTENT content content CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (12) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CONTENT OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (13) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA empty
    (14) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA empty

    OPENDATA        shift and go to state 3

    start                          shift and go to state 1
    dataCell                       shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> dataCell .

    $end            reduce using rule 1 (start -> dataCell .)


state 3

    (8) dataCell -> OPENDATA . OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA empty
    (9) dataCell -> OPENDATA . OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA empty
    (10) dataCell -> OPENDATA . OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (11) dataCell -> OPENDATA . OPENHREF CONTENT content content CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (12) dataCell -> OPENDATA . OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CONTENT OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (13) dataCell -> OPENDATA . OPENHREF CONTENT CLOSEHREF OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA empty
    (14) dataCell -> OPENDATA . OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA empty

    OPENHREF        shift and go to state 4


state 4

    (8) dataCell -> OPENDATA OPENHREF . CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA empty
    (9) dataCell -> OPENDATA OPENHREF . CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA empty
    (10) dataCell -> OPENDATA OPENHREF . CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (11) dataCell -> OPENDATA OPENHREF . CONTENT content content CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (12) dataCell -> OPENDATA OPENHREF . CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CONTENT OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (13) dataCell -> OPENDATA OPENHREF . CONTENT CLOSEHREF OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA empty
    (14) dataCell -> OPENDATA OPENHREF . CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA empty

    CONTENT         shift and go to state 5


state 5

    (8) dataCell -> OPENDATA OPENHREF CONTENT . CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA empty
    (9) dataCell -> OPENDATA OPENHREF CONTENT . CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA empty
    (10) dataCell -> OPENDATA OPENHREF CONTENT . CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (11) dataCell -> OPENDATA OPENHREF CONTENT . content content CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (12) dataCell -> OPENDATA OPENHREF CONTENT . CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CONTENT OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (13) dataCell -> OPENDATA OPENHREF CONTENT . CLOSEHREF OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA empty
    (14) dataCell -> OPENDATA OPENHREF CONTENT . CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA empty
    (20) content -> . CONTENT
    (21) content -> . empty
    (19) empty -> .

  ! shift/reduce conflict for CONTENT resolved as shift
  ! shift/reduce conflict for CLOSEHREF resolved as shift
    CLOSEHREF       shift and go to state 7
    CONTENT         shift and go to state 6

  ! CONTENT         [ reduce using rule 19 (empty -> .) ]
  ! CLOSEHREF       [ reduce using rule 19 (empty -> .) ]

    content                        shift and go to state 8
    empty                          shift and go to state 9

state 6

    (20) content -> CONTENT .

    CONTENT         reduce using rule 20 (content -> CONTENT .)
    CLOSEHREF       reduce using rule 20 (content -> CONTENT .)
    CLOSEDATA       reduce using rule 20 (content -> CONTENT .)


state 7

    (8) dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF . CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content CLOSEDATA empty
    (9) dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF . CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA OPENDATA content content CLOSEDATA OPENDATA content CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA content CLOSEDATA empty
    (10) dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF . CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (12) dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF . CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CONTENT OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA OPENDATA CONTENT openhref content content content closehref CLOSEDATA empty
    (13) dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA empty
    (14) dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF . CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA empty

    CLOSEDATA       shift and go to state 11
    OPENHREF        shift and go to state 10


state 8
